# adaptive-executor

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/: pre-commit-config.yaml
.github/workflows/: ci.yml  docs.yml  format-and-check.yml  publish.yml
adaptive_executor/: __init__.py  criteria.py  executor.py  logger.py  policies.py
adaptive_executor/criteria/: __init__.py  base.py  cpu.py  datetime.py  memory.py  time.py
adaptive_executor/criteria/multi/: __init__.py  conditional.py  multi.py
adaptive_executor/utils/: __init__.py  logger.py
docs/: api.rst  conf.py  criteria.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/_templates/: layout.html
examples/: README.md  basic_usage.py  complex_scaling.py  conditional_scaling.py  config_management.py  custom_criteria.py  data_processing.py  multi_criteria.py  resource_scaling.py  time_scaling.py  web_scraping.py
tests/: test_criteria.py  test_criteria_clean.py  test_executor.py  test_policies.py
